# openarmature-spec

./: .gitignore  CHANGELOG.md  CLAUDE.md  GOVERNANCE.md  LICENSE  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
.github/: copilot-instructions.md
_docs/: unified_agent_framework.md
docs/: compatibility.md  conformance.md  glossary.md  index.md  open-questions.md  openarmature.md  proposals.md  releasing.md
proposals/: 0001-graph-engine-foundation.md  0002-subgraph-explicit-mapping.md  0003-node-boundary-observer-hooks.md  0004-pipeline-utilities-middleware.md  0005-pipeline-utilities-parallel-fan-out.md  0006-llm-provider-core.md  0007-observability-otel-span-mapping.md  0008-pipeline-utilities-checkpointing.md  0009-pipeline-utilities-per-instance-fan-out-resume.md  0010-drain-timeout.md  0011-pipeline-utilities-parallel-branches.md  0012-graph-engine-completed-event-after-edges.md  0013-fan-out-config-on-node-event.md  0014-pipeline-utilities-state-migration.md  0015-llm-provider-multimodal-images.md  0016-llm-provider-structured-output.md  0017-prompt-management-core.md  0018-state-migration-chain-ambiguity.md  0019-llm-provider-multi-provider-extension.md  0020-sessions-capability.md  0021-graph-suspension.md  0022-harness-contract.md  0023-canonical-state-reducers.md  0024-llm-span-payload-and-semconv.md  0025-llm-provider-tool-choice.md  0026-llm-provider-wire-format-mapping-template.md  0027-fan-out-instance-progress-result-is-error.md  0028-schema-version-canonical-source.md  0029-count-drift-strict.md  0030-drain-snapshot-and-timeout-validation.md  (+79 more)
(+1092 files in other folders)
